src/lexer/tests/snapshots/mathemascii__lexer__tests__numbers__only_number.snap
---
source: src/lexer/tests/numbers.rs
expression: "Snapshot((input, tokens))"
---
24.42

24.42
^^^^^ -> Number at: 0 -> 5


