src/lexer/tests/snapshots/mathemascii__lexer__tests__numbers__start_and_stop_dot.snap
---
source: src/lexer/tests/numbers.rs
expression: "Snapshot((input, tokens))"
---
.42.3

.42
^^^ -> Number at: 0 -> 3

   .3
   ^^ -> Number at: 3 -> 5


