src/lexer/tests/snapshots/mathemascii__lexer__tests__numbers__start_with_dot.snap
---
source: src/lexer/tests/numbers.rs
expression: "Snapshot((*input, tokens))"
---
.42 .42a

.42
^^^ -> Number at: 0 -> 3

    .42
    ^^^ -> Number at: 4 -> 7

       a
       ^ -> Variable at: 7 -> 8


