src/lexer/tests/snapshots/mathemascii__lexer__tests__numbers__stop_at_non_digit.snap
---
source: src/lexer/tests/numbers.rs
expression: "Snapshot((input, tokens))"
---
24.42a

24.42
^^^^^ -> Number at: 0 -> 5


